# tts_ci_cd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_tests_on_pr.yml
docs/examples/: Dockerfile
src/tts_ci_cd/: build_sphinx_docs.py  demosat_dev_setup.py  deploy_lib.py  dev_setup.py  doc_builder.py  git_dashboard.py  repo_manager.py  run_test_matrix.py
src/tts_ci_cd/dockerfiles/: Dockerfile.unittest
src/tts_ci_cd/support_files/: demosat_setup.yaml  dev_setup.yaml
src/tts_ci_cd/test/: test_trivial.py
tts_config/: README.md  deploy_locations.yaml
